Monocle minimalized!