@@ -1,24 +1,11 @@
 package com.sun.glass.ui.monocle;
 
+import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 
 import javafx.application.Application;
 
 public class MonocleLauncher {
-
-	//---------------------------------------------------------------------------------------------
-	// CONSTANTS.
-	//---------------------------------------------------------------------------------------------
-
-	private static final String PLATFORM_FACTORY_CLASS = "com.sun.glass.ui.PlatformFactory";
-	private static final String PLATFORM_FACTORY_MONOCLE_IMPL = "com.sun.glass.ui.monocle.MonoclePlatformFactory";
-
-	private static final String NATIVE_PLATFORM_FACTORY_CLASS = "com.sun.glass.ui.monocle.NativePlatformFactory";
-	private static final String NATIVE_PLATFORM_HEADLESS_IMPL = "com.sun.glass.ui.monocle.HeadlessPlatform";
-
-	//---------------------------------------------------------------------------------------------
-	// METHODS.
-	//---------------------------------------------------------------------------------------------
 
 	public void launch(Class<? extends Application> appClass, String... appArgs) {
 		if (appArgs[2].equalsIgnoreCase("true")) {
@@ -26,10 +13,6 @@ public class MonocleLauncher {
 		}
 		Application.launch(appClass, appArgs);
 	}
-
-	//---------------------------------------------------------------------------------------------
-	// PRIVATE METHODS.
-	//---------------------------------------------------------------------------------------------
 
 	private void initMonocleHeadless() {
 		try {
@@ -41,15 +24,23 @@ public class MonocleLauncher {
 	}
 
 	private void assignMonoclePlatform() throws Exception {
-		final Class<?> platformFactoryClass = Class.forName(PLATFORM_FACTORY_CLASS);
-		final Object platformFactoryImpl = Class.forName(PLATFORM_FACTORY_MONOCLE_IMPL).newInstance();
+		final Class<?> platformFactoryClass = Class.forName("com.sun.glass.ui.PlatformFactory");
+		final Object platformFactoryImpl = Class.forName("com.sun.glass.ui.monocle.MonoclePlatformFactory").getDeclaredConstructor().newInstance();
 		assignPrivateStaticField(platformFactoryClass, "instance", platformFactoryImpl);
 	}
 
 	private void assignHeadlessPlatform() throws Exception {
-		final Class<?> nativePlatformFactoryClass = Class.forName(NATIVE_PLATFORM_FACTORY_CLASS);
-		final Object nativePlatformImpl = Class.forName(NATIVE_PLATFORM_HEADLESS_IMPL).newInstance();
-		assignPrivateStaticField(nativePlatformFactoryClass, "platform", nativePlatformImpl);
+		final Class<?> nativePlatformFactoryClass = Class.forName("com.sun.glass.ui.monocle.NativePlatformFactory");
+		try {
+			final Constructor<?> nativePlatformCtor = Class.forName("com.sun.glass.ui.monocle.HeadlessPlatform").getDeclaredConstructor();
+			nativePlatformCtor.setAccessible(true);
+			assignPrivateStaticField(nativePlatformFactoryClass, "platform", nativePlatformCtor.newInstance());
+		} catch (final ClassNotFoundException exception) {
+			// Before Java 8u40 HeadlessPlatform was located inside of a "headless" package.
+			final Constructor<?> nativePlatformCtor = Class.forName("com.sun.glass.ui.monocle.headless.HeadlessPlatform").getDeclaredConstructor();
+			nativePlatformCtor.setAccessible(true);
+			assignPrivateStaticField(nativePlatformFactoryClass, "platform", nativePlatformCtor.newInstance());
+		}
 	}
 
 	private void assignPrivateStaticField(Class<?> cls, String name, Object value) throws Exception {
